packages/css-engine/crates/aihu-css-core/tests/snapshots/light_scope_snapshot__keyframes_global_escape_hatch_is_not_renamed.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 110
expression: "compile_sfc_scoped(&light(\"@keyframes $global fade-in { from { opacity: 0; } to { opacity: 1; } } .card { animation: fade-in 1s ease; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
.card {
  animation: fade-in 1s ease;
}
}
